# mta-cot-protocol-tcp

./: .gitignore  README.md
client/: package-lock.json  package.json  tsconfig.json
client/src/: index.ts
client/src/crypto/: encryption.ts  utils.ts
client/src/protobuf/: protobuf-handler.ts
client/src/protocol/: cot-protocol.ts  mta-protocol.ts  ot-protocol.ts
client/src/tcp/: mta-client.ts
client/src/types/: ot-types.ts
proto/: mta.proto  nanopb.proto
server/: CMakeLists.txt  mta.pb.c  mta.pb.h  run.sh
server/src/: main.cpp
server/src/crypto/: crypto_operations.cpp  crypto_operations.h  random_generator.cpp  random_generator.h
server/src/protobuf/: mta.pb.h  protobuf_handler.cpp  protobuf_handler.h
server/src/protocol/: cot_protocol.cpp  cot_protocol.h  mta_protocol.cpp  mta_protocol.h  ot_protocol.cpp  ot_protocol.h
server/src/tcp/: mta_server.cpp  mta_server.h
